adjust responsive design

--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ class="h-[500px] flex flex-col">
                 <div
                 data-aos="fade-right"
                 data-aos-duration="2000"
-                class="w[280px] xl:w-[700px] xl:h-[226px] overflow-hidden mt-20 flex flex-col xl:flex-row text-white items-center xl:ml-[-320px]">
-                    <video class="w-[500px] m:w-[500px] hover:transition-opacity" src="Vidéos/Aqua serene.mp4" autoplay muted loop></video>
+                class="w-[280px] xl:w-[700px] xl:h-[226px] overflow-hidden mt-20 flex flex-col xl:flex-row text-white items-center xl:ml-[-320px]">
+                    <video class="w-[500px] w-[500px] hover:transition-opacity" src="Vidéos/Aqua serene.mp4" autoplay muted loop></video>
                     <div class="w-[400px] xl:ml-[40px] flex flex-col items-center justify-center mt-4 xl:mt-0 xl:justify-start xl:items-start">
                         <p class="mb-5 text-blue-100 underline underline-offset-[7px]">AQUA SERENE</p>
                         <a class="xl:mb-1 hover:text-slate-500" href="https://github.com/FranckEmmanuel89/Aqua-Serene" target="_blank">Github Repository</a>
@@ -287,7 +287,7 @@ class="h-[500px] flex flex-col">
                 <div 
                 data-aos="fade-left"
                 data-aos-duration="2000"
-                class="w-[280px] xl:ml-[321px] xl:w-[750px] flex flex-col xl:flex-row-reverse xl:h-[226px] overflow-hidden text-white items-center ml-[60px] mt-[50px] xl:mr-[-60px] xl:mt-20">
+                class="w-[280px] xl:ml-[321px] xl:w-[750px] flex flex-col xl:flex-row-reverse xl:h-[226px] overflow-hidden text-white items-center mt-[50px] xl:mr-[-60px] xl:mt-20">
                     <video class="w-[500px]" src="Vidéos/Meteo App.mp4" autoplay muted loop></video>
                     <div class="w-[400px] xl:mr-[40px] flex flex-col items-center justify-center mt-4 xl:mt-0 xl:justify-end xl:items-end">
                         <p class="mb-5 text-blue-100 underline underline-offset-[7px] text-end">METEO APP</p>
