changed message icon

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ class="h-[500px] flex flex-col">
             <div id="findUs" class="flex mb-5">
               <img
                 class="size-8 bg-slate-600 rounded-full p-2 mr-3"
-                src="images/icons8-email-24.png"
+                src="images/icons8-nouveau-message-100.png"
                 alt="icon mail"
               />
               <span>franck_dev@myyahoo.com</span>
@@ -412,16 +412,8 @@ class="h-[500px] flex flex-col">
             <span class="mb-5 lang" data-lang="en"> FOLLOW ME </span>
             <span class="mb-5 hidden lang" data-lang="it"> SEGUIMI </span>
             <div class="flex gap-6">
-              <a target="_blank" href="https://www.linkedin.com/in/franck-emmanuel-neghueko-djoumessi-8aa5352a7/"><img
-                class="size-6 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.4] lg:size-7"
-                src="images/icons8-linkedin-100.png"
-                alt="icon linkedin" 
-              /> </a>
-              <a target="_blank" href="https://github.com/FranckEmmanuel89"><img
-                class="size-6 cursor-pointer transition-transform ease-out duration-[0.5s] hover:scale-[1.4] lg:size-7"
-                src="images/icons8-github-100 (1).png"
-                alt="icon github"
-              /></a>
+              <a target="_blank" href="https://www.linkedin.com/in/franck-emmanuel-neghueko-djoumessi-8aa5352a7/"><img class="size-6 lg:size-9 hover:opacity-60 transition-transform ease-out duration-[0.5s] hover:scale-[1.4]" src="Images/icons8-linkedin-100.png" alt="icon linkedin"></a>
+              <a target="_blank" href="https://github.com/FranckEmmanuel89"><img class="bg-transparent size-6 lg:size-9 hover:opacity-60 transition-transform ease-out duration-[0.5s] hover:scale-[1.4]" src="Images/icons8-github-100 (1).png" alt="icon github"></a>
             </div>
           </div>
         </div>
