deleted contact icon

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ class="h-[500px] flex flex-col">
                     <div class="w-[400px] xl:ml-[40px] flex flex-col items-center justify-center mt-4 xl:mt-0 xl:justify-start xl:items-start">
                         <p class="mb-5 text-blue-100 underline underline-offset-[7px]">AQUA SERENE</p>
                         <a class="xl:mb-1 hover:text-slate-500" href="https://github.com/FranckEmmanuel89/Aqua-Serene" target="_blank">Github Repository</a>
-                        <p><a class="hover:text-slate-500 lang" data-lang="en" href="https://franckemmanuel89.github.io/Note-App/" target="_blank">Visit The Website</a></p>
+                        <p><a class="hover:text-slate-500 lang" data-lang="en" href="https://franckemmanuel89.github.io/Aqua-Serene/" target="_blank">Visit The Website</a></p>
                         <p><a class="hover:text-slate-500 hidden lang" data-lang="it" href="https://franckemmanuel89.github.io/Note-App/" target="_blank">Visita il sito web</a></p>
                         <p class="mt-5"><span class="text-orange-300">HTML</span> - <span class="text-[#38BDF8]">TAILWIND CSS</span>
                     </div>
@@ -394,26 +394,16 @@ class="h-[500px] flex flex-col">
             <span class="mb-5 lang" data-lang="en">CONTACT ME</span>
             <span class="mb-5 hidden lang" data-lang="it">CONTATTAMI</span>
             <div class="flex mb-4">
-              <img
-                class="size-8 bg-slate-600 rounded-full p-2 mr-3"
-                src="images/icons8-téléphone-100.png"
-                alt="icon telefono"
-              />
-              <span>327 895 2132</span>
+              <span>TEL : 327 895 2132</span>
             </div>
             <div id="findUs" class="flex mb-5">
-              <img
-                class="size-8 bg-slate-600 rounded-full p-2 mr-3"
-                src="images/icons8-nouveau-message-100.png"
-                alt="icon mail"
-              />
-              <span>franck_dev@myyahoo.com</span>
+              <span>EMAIL : franck_dev@myyahoo.com</span>
             </div>
             <span class="mb-5 lang" data-lang="en"> FOLLOW ME </span>
             <span class="mb-5 hidden lang" data-lang="it"> SEGUIMI </span>
             <div class="flex gap-6">
-              <a target="_blank" href="https://www.linkedin.com/in/franck-emmanuel-neghueko-djoumessi-8aa5352a7/"><img class="size-6 lg:size-9 hover:opacity-60 transition-transform ease-out duration-[0.5s] hover:scale-[1.4]" src="Images/icons8-linkedin-100.png" alt="icon linkedin"></a>
-              <a target="_blank" href="https://github.com/FranckEmmanuel89"><img class="bg-transparent size-6 lg:size-9 hover:opacity-60 transition-transform ease-out duration-[0.5s] hover:scale-[1.4]" src="Images/icons8-github-100 (1).png" alt="icon github"></a>
+              <a target="_blank" class="bg-slate-800 p-2 rounded-sm hover:bg-white hover:text-black" href="https://www.linkedin.com/in/franck-emmanuel-neghueko-djoumessi-8aa5352a7/">LINKEDIN</a>
+              <a target="_blank" class="bg-slate-800 p-2 rounded-sm hover:bg-white hover:text-black" href="https://github.com/FranckEmmanuel89">GITHUB</a>
             </div>
           </div>
         </div>
