changed order videos project

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ class="h-[500px] flex flex-col">
                 <img class="absolute -z-40 size-24 rotate-45 -right-[50px] top-[150px] hidden xl:flex" src="Images/pngegg (10).png" alt="">
             </div>
             <div class="h-[45px] flex items-center justify-center items-center xl:justify-start"> <!--j ai changé ici flex justify items-->  
-                <button class="text-white border border-amber-100 rounded-lg bg-slate-950 px-4 py-2 hover:bg-white hover:text-slate-950 active:mt-[1px] active:ml-[1px] lang" data-lang="en"><a target="_blank" href="">My Resume</a></button>
-                <button class="text-white border border-amber-100 rounded-lg bg-slate-950 px-4 py-2 hover:bg-white hover:text-slate-950 active:mt-[1px] active:ml-[1px] hidden lang" data-lang="it"><a target="_blank" href="">Curriculum</a></button>
+                <a href="https://drive.google.com/file/d/1xZvxyh2MS5W1ZZAh_H-ui0-q3yUxEkeC/view" target="_blank"><button class="text-white border border-amber-100 rounded-lg bg-slate-950 px-4 py-2 hover:bg-white hover:text-slate-950 active:mt-[1px] active:ml-[1px] lang" data-lang="en">My Resume</button></a>
+                <a href="https://drive.google.com/file/d/1xZvxyh2MS5W1ZZAh_H-ui0-q3yUxEkeC/view" target="_blank"><button class="text-white border border-amber-100 rounded-lg bg-slate-950 px-4 py-2 hover:bg-white hover:text-slate-950 active:mt-[1px] active:ml-[1px] hidden lang" data-lang="it">Curriculum</button></a>
             </div>
         </div>
         </div>
@@ -238,11 +238,13 @@ class="h-[500px] flex flex-col">
             data-aos="fade-left"
             data-aos-duration="2000"
             class=" w-[280px] xl:ml-[321px] xl:w-[750px] flex flex-col xl:flex-row-reverse xl:h-[226px] overflow-hidden text-white items-center mt-[50px] xl:mt-20 xl:mr-[-60px]">
-                <video class="w-[500px]" src="Vidéos/borcelle restaurant.mp4" autoplay muted loop></video>
+                <video class="w-[500px]" src="Vidéos/Pretty Lovely.mp4" autoplay muted loop></video>
                 <div class="w-[400px] xl:mr-[40px] flex flex-col items-center justify-center mt-4 xl:mt-0 xl:justify-end xl:items-end">
-                    <p class="mb-5 text-blue-100 underline underline-offset-[7px] text-end">BORCELLE RESTAURANT</p>
-                    <p class="text-end"><a class="mb-10 hover:text-slate-500" href="https://github.com/FranckEmmanuel89/Borcelle-Restaurant" target="_blank">Github Repository</a></p>
-                    <p class="text-end mt-5"><span class="text-orange-300">HTML</span> - <span class="text-blue-400">CSS</span></p>
+                    <p class="mb-5 text-blue-100 underline underline-offset-[7px] text-end">PRETTY LOVELY</p>
+                    <p class="text-end"><a class="mb-10 hover:text-slate-500" href="https://github.com/FranckEmmanuel89/Pretty-Lovely" target="_blank">Github Repository</a></p>
+                    <p class="text-end"><a class="mb-10 hover:text-slate-500 lang" data-lang="en" href="https://franckemmanuel89.github.io/Pretty-Lovely/" target="_blank">Visit the Website</a></p>
+                    <p class="text-end"><a class="mb-10 hover:text-slate-500 hidden lang" data-lang="it" href="https://franckemmanuel89.github.io/Pretty-Lovely/" target="_blank">Visita il sito web</a></p>
+                    <p class="text-end mt-5"><span class="text-amber-100">JS</span> - <span class="text-[#38BDF8]">TAILWIND CSS</span> - <span class="text-orange-300">HTML</span></p>
                 </div>
             </div>
             <div
@@ -262,11 +264,11 @@ class="h-[500px] flex flex-col">
             data-aos="fade-left"
             data-aos-duration="2000"
             class=" w-[280px] xl:ml-[321px] xl:w-[750px] flex flex-col xl:flex-row-reverse xl:h-[226px] overflow-hidden text-white items-center mt-[50px] xl:mt-20 xl:mr-[-60px]">
-                <video class="w-[500px]" src="Vidéos/Pretty Lovely.mp4" autoplay muted loop></video>
+                <video class="w-[500px]" src="Vidéos/borcelle restaurant.mp4" autoplay muted loop></video>
                 <div class="w-[400px] xl:mr-[40px] flex flex-col items-center justify-center mt-4 xl:mt-0 xl:justify-end xl:items-end">
-                    <p class="mb-5 text-blue-100 underline underline-offset-[7px] text-end">PRETTY LOVELY</p>
-                    <p class="text-end"><a class="mb-10 hover:text-slate-500" href="https://github.com/FranckEmmanuel89/Pretty-Lovely" target="_blank">Github Repository</a></p>
-                    <p class="text-end mt-5"><span class="text-amber-100">JS</span> - <span class="text-[#38BDF8]">TAILWIND CSS</span> - <span class="text-orange-300">HTML</span></p>
+                    <p class="mb-5 text-blue-100 underline underline-offset-[7px] text-end">BORCELLE RESTAURANT</p>
+                    <p class="text-end"><a class="mb-10 hover:text-slate-500" href="https://github.com/FranckEmmanuel89/Borcelle-Restaurant" target="_blank">Github Repository</a></p>
+                    <p class="text-end mt-5"><span class="text-orange-300">HTML</span> - <span class="text-blue-400">CSS</span></p>
                 </div>
             </div>
 
