adjust videos link

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@ class="h-[500px] flex flex-col">
                 <div class="w-[400px] xl:ml-[40px] flex flex-col items-center justify-center mt-2 xl:mt-0 xl:justify-start xl:items-start"> <!--chnager le flex ici-->
                     <p class="mb-5 text-blue-100 underline underline-offset-[7px]">MEMORY CARD GAME</p>
                     <a class="xl:mb-1 hover:text-slate-500" href="https://github.com/FranckEmmanuel89/Memory-Card-Game" target="_blank">Github Repository</a>
-                    <p><a class="hover:text-slate-500 lang" data-lang="en" href="https://franckemmanuel89.github.io/Note-App/" target="_blank">Visit and try</a></p>
-                    <p><a class="hover:text-slate-500 hidden lang" data-lang="it" href="https://franckemmanuel89.github.io/Note-App/" target="_blank">Visita e Gioca</a></p>
+                    <p><a class="hover:text-slate-500 lang" data-lang="en" href="https://franckemmanuel89.github.io/Memory-Card-Game/" target="_blank">Visit and try</a></p>
+                    <p><a class="hover:text-slate-500 hidden lang" data-lang="it" href="https://franckemmanuel89.github.io/Memory-Card-Game/" target="_blank">Visita e Gioca</a></p>
                     <p class="mt-5"><span class="text-amber-100">JS</span> - <span class="text-orange-300">HTML</span> - <span class="text-blue-400">CSS</span></p>
                 </div>
             </div>
@@ -282,7 +282,7 @@ class="h-[500px] flex flex-col">
                         <p class="mb-5 text-blue-100 underline underline-offset-[7px]">AQUA SERENE</p>
                         <a class="xl:mb-1 hover:text-slate-500" href="https://github.com/FranckEmmanuel89/Aqua-Serene" target="_blank">Github Repository</a>
                         <p><a class="hover:text-slate-500 lang" data-lang="en" href="https://franckemmanuel89.github.io/Aqua-Serene/" target="_blank">Visit The Website</a></p>
-                        <p><a class="hover:text-slate-500 hidden lang" data-lang="it" href="https://franckemmanuel89.github.io/Note-App/" target="_blank">Visita il sito web</a></p>
+                        <p><a class="hover:text-slate-500 hidden lang" data-lang="it" href="https://franckemmanuel89.github.io/Aqua-Serene/" target="_blank">Visita il sito web</a></p>
                         <p class="mt-5"><span class="text-orange-300">HTML</span> - <span class="text-[#38BDF8]">TAILWIND CSS</span>
                     </div>
                 </div>
