--- a/index.html
+++ b/index.html
@@ -264,11 +264,12 @@ class="h-[500px] flex flex-col">
             data-aos="fade-left"
             data-aos-duration="2000"
             class=" w-[280px] xl:ml-[321px] xl:w-[750px] flex flex-col xl:flex-row-reverse xl:h-[226px] overflow-hidden text-white items-center mt-[50px] xl:mt-20 xl:mr-[-60px]">
-                <video class="w-[500px]" src="Vidéos/borcelle restaurant.mp4" autoplay muted loop></video>
+                <video class="w-[500px]" src="Vidéos/Evolving-Fitness.mp4" autoplay muted loop></video>
                 <div class="w-[400px] xl:mr-[40px] flex flex-col items-center justify-center mt-4 xl:mt-0 xl:justify-end xl:items-end">
-                    <p class="mb-5 text-blue-100 underline underline-offset-[7px] text-end">BORCELLE RESTAURANT</p>
-                    <p class="text-end"><a class="mb-10 hover:text-slate-500" href="https://github.com/FranckEmmanuel89/Borcelle-Restaurant" target="_blank">Github Repository</a></p>
-                    <p class="text-end mt-5"><span class="text-orange-300">HTML</span> - <span class="text-blue-400">CSS</span></p>
+                    <p class="mb-5 text-blue-100 underline underline-offset-[7px] text-end">EVOLVING FITNESS</p>
+                    <p class="text-end"><a class="mb-10 hover:text-slate-500 lang" data-lang="en" href="https://franckemmanuel89.github.io/Evolving-Fitness/" target="_blank">Visit the Website</a></p>
+                    <p class="text-end"><a class="mb-10 hover:text-slate-500 hidden lang" data-lang="it" href="https://franckemmanuel89.github.io/Evolving-Fitness/" target="_blank">Visita il sito web</a></p>
+                    <p class="text-end mt-5"><span class="text-orange-300">HTML</span> - <span class="text-[#38BDF8]">TAILWIND CSS</span> - <span class="text-amber-100">JS</span> 
                 </div>
             </div>
 
@@ -297,6 +298,17 @@ class="h-[500px] flex flex-col">
                         <p class="text-end"><a class="mb-10 hover:text-slate-500 lang" data-lang="en" href="https://franckemmanuel89.github.io/Meteo-App/" target="_blank">Visit and try</a></p>
                         <p class="text-end"><a class="mb-10 hover:text-slate-500 hidden lang" data-lang="it" href="https://franckemmanuel89.github.io/Meteo-App/" target="_blank">Visita e prova</a></p>
                         <p class="text-end mt-5"><span class="text-amber-100">JS</span> - <span class="text-orange-300">HTML</span> - <span class="text-blue-400">CSS</span></p>
+                    </div>
+                </div>
+                <div
+                data-aos="fade-right"
+                data-aos-duration="2000"
+                class="w-[280px] xl:w-[700px] xl:h-[226px] overflow-hidden mt-20 flex flex-col xl:flex-row text-white items-center xl:ml-[-320px]">
+                    <video class="w-[500px] w-[500px] hover:transition-opacity" src="Vidéos/borcelle restaurant.mp4" autoplay muted loop></video>
+                    <div class="w-[400px] xl:ml-[40px] flex flex-col items-center justify-center mt-4 xl:mt-0 xl:justify-start xl:items-start">
+                        <p class="mb-5 text-blue-100 underline underline-offset-[7px]">BORCELLE RESTAURANT</p>
+                        <a class="xl:mb-1 hover:text-slate-500" href="https://github.com/FranckEmmanuel89/Borcelle-Restaurant" target="_blank">Github Repository</a>
+                        <p class="mt-5"><span class="text-orange-300">HTML</span> - <span class="text-blue-400">CSS</span></p>
                     </div>
                 </div>
             </div>
